# Soft-Dev

./: .env.example  .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  Dockerfile  README.md  RUN.md  TUTORIAL.md  deny.toml
.agent/agents/: nexus.agent.md
.github/workflows/: auto-sync-branches.yml  release.yml  semver_checks.yml
.kilo/plans/: 1777750429584-glowing-wizard.md  1777761256449-silent-squid.md
binary/: Cargo.toml
binary/src/: main.rs  state.rs
binary/tests/: nexus_e2e.rs  nexus_real_e2e.rs
crates/agent-forge/: Cargo.toml
crates/agent-nexus/: Cargo.toml
crates/agent-vessel/: Cargo.toml
crates/agentflow-tui/: Cargo.toml
crates/agentflow-tui/src/doctor/: mod.rs
crates/agentflow-tui/src/setup/: mod.rs  step_agents.rs  step_api.rs  step_done.rs  step_existing.rs  step_github.rs  step_provider.rs  step_proxy.rs  step_repo.rs  step_welcome.rs
crates/agentflow-tui/src/util/: logo.rs  theme.rs
crates/agentflow-tui/src/widgets/: input.rs  select.rs
crates/anthropic-mock/: Cargo.toml
crates/github/: Cargo.toml
crates/pair-harness/: Cargo.toml
docs/: cli-backend-configuration.md  demo.md  example-issues.md  forge-pair-integration.md  forge-sentinel-arch.md  identity-manager.md  nexus-issue-sync.md  shared-store.md
docs/architecture/: system-behavior.md  vessel-agent.md
orchestration/agent/: registry.json
packaging/npm/: .env.example  README.md  (+1 more)
scripts/: check_setup.sh  demo_recording_guide.md  init-target-project.sh  mock_claude.py  mock_llm.py  mock_mcp.py  start_proxy.sh  sync-worktrees.sh  test_nexus_openai.sh
(+56 files in other folders)
